feat: validation struct and updated postmans
