# agent_identity/src/connection/aggregate.rs
@@ -18,7 +18,6 @@ pub struct Connection {
     pub url: Option<Url>,
     #[schema(value_type = Vec<String>)]
     pub dids: Vec<DIDUrl>,
-    pub domain_linkage_valid: bool,
     pub display: Option<ConnectionDisplayProperties>,
     pub first_interacted: Option<DateTime<Utc>>,
     pub last_interacted: Option<DateTime<Utc>>,
@@ -27,13 +26,31 @@ pub struct Connection {
     // pub holder_options: Option<HolderOptions>,
     // pub verifier_options: Option<VerifierOptions>,
     pub pending_changes: Option<PendingChanges>,
+    pub validations: Vec<Validation>,
+}
+
+#[derive(Debug, Clone, Serialize, Deserialize, PartialEq, utoipa::ToSchema)]
+pub enum Validation {
+    DomainLinkage(DomainLinkageValidation),
+}
+
+#[derive(Debug, Clone, Serialize, Deserialize, PartialEq, utoipa::ToSchema)]
+pub struct DomainLinkageValidation {
+    pub domain: Url,
+    pub result: ValidationResult,
+}
+
+#[derive(Debug, Clone, Serialize, Deserialize, PartialEq, utoipa::ToSchema)]
+pub struct ValidationResult {
+    pub valid: bool,
+    pub error: Option<String>,
+    pub last_validated: DateTime<Utc>,
 }
 
 #[derive(Debug, Clone, Serialize, Deserialize, PartialEq, Default, utoipa::ToSchema)]
 pub struct PendingChanges {
     #[schema(value_type = Vec<String>)]
     pub dids: Option<Vec<DIDUrl>>,
-    pub domain_linkage_valid: bool,
     // TODO: Should all changes to the display be notified to a user? Or only changes to the name
     pub display: Option<ConnectionDisplayProperties>,
 }
@@ -75,12 +92,21 @@ impl Aggregate for Connection {
                 let (dids, domain_linkage_valid) = services.fetch_linked_dids(&url).await?;
                 let now = services.now();
 
+                let validations = vec![Validation::DomainLinkage(DomainLinkageValidation {
+                    domain: url.clone(),
+                    result: ValidationResult {
+                        valid: domain_linkage_valid,
+                        error: None,
+                        last_validated: now,
+                    },
+                })];
+
                 Ok(vec![ConnectionAdded {
                     connection_id,
                     display: connection_display_properties,
                     url,
                     dids: dids.clone(),
-                    domain_linkage_valid,
+                    validations,
                     first_interacted: Some(now),
                     last_interacted: Some(now),
                 }])
@@ -94,27 +120,41 @@ impl Aggregate for Connection {
                 let metadata = services.fetch_credential_issuer_metadata(domain_ref).await?;
                 let new_display = get_display_from_metadata(metadata.clone());
                 let (new_dids, domain_linkage_valid) = services.fetch_linked_dids(domain_ref).await?;
+                let now = services.now();
+
+                let validations = vec![Validation::DomainLinkage(DomainLinkageValidation {
+                    domain: domain_ref.clone(),
+                    result: ValidationResult {
+                        valid: domain_linkage_valid,
+                        error: None,
+                        last_validated: now,
+                    },
+                })];
 
                 let proposed = PendingChanges {
                     dids: Some(new_dids),
                     display: new_display,
-                    domain_linkage_valid,
                 };
 
                 let current = PendingChanges {
                     dids: Some(self.dids.clone()),
                     display: self.display.clone(),
-                    domain_linkage_valid: self.domain_linkage_valid,
                 };
 
                 if proposed != current {
                     Ok(vec![ConnectionSynced {
                         connection_id,
+                        validations,
                         pending_changes: Some(proposed),
-                        last_interacted: Some(services.now()),
+                        last_interacted: Some(now),
                     }])
                 } else {
-                    Ok(vec![])
+                    Ok(vec![ConnectionSynced {
+                        connection_id,
+                        validations,
+                        pending_changes: None,
+                        last_interacted: Some(now),
+                    }])
                 }
             }
             AcceptConnectionChanges { connection_id } => {
@@ -129,7 +169,6 @@ impl Aggregate for Connection {
                     connection_id,
                     display: pending.display.clone(),
                     dids: pending.dids.clone().unwrap(),
-                    domain_linkage_valid: pending.domain_linkage_valid,
                     last_interacted: Some(services.now()),
                     pending_changes: None,
                 }])
@@ -147,7 +186,7 @@ impl Aggregate for Connection {
             ConnectionAdded {
                 connection_id,
                 display,
-                domain_linkage_valid,
+                validations,
                 url,
                 dids,
                 first_interacted,
@@ -157,7 +196,7 @@ impl Aggregate for Connection {
                 self.display = display;
                 self.url = Some(url);
                 self.dids = dids;
-                self.domain_linkage_valid = domain_linkage_valid;
+                self.validations = validations;
                 self.first_interacted = first_interacted;
                 self.last_interacted = last_interacted;
             }
@@ -165,23 +204,23 @@ impl Aggregate for Connection {
                 connection_id,
                 pending_changes,
                 last_interacted,
+                validations,
             } => {
                 self.connection_id = connection_id;
                 self.pending_changes = pending_changes;
                 self.last_interacted = last_interacted;
+                self.validations = validations;
             }
             ConnectionChangesAccepted {
                 connection_id,
                 display,
                 dids,
-                domain_linkage_valid,
                 last_interacted,
                 pending_changes,
             } => {
                 self.connection_id = connection_id;
                 self.display = display;
                 self.dids = dids;
-                self.domain_linkage_valid = domain_linkage_valid;
                 self.last_interacted = last_interacted;
                 self.pending_changes = pending_changes;
             }
@@ -284,9 +323,16 @@ pub mod document_tests {
                         alt_text: Some("Organisational Logo".to_string()),
                     }),
                 }),
-                url: mock_issuer,
+                url: mock_issuer.clone(),
                 dids: vec![TEST_DID.parse().unwrap()],
-                domain_linkage_valid: false,
+                validations: vec![Validation::DomainLinkage(DomainLinkageValidation {
+                    domain: mock_issuer,
+                    result: ValidationResult {
+                        valid: false,
+                        error: None,
+                        last_validated: mock_time,
+                    },
+                })],
                 first_interacted: Some(mock_time),
                 last_interacted: Some(mock_time),
             }]);
@@ -346,7 +392,14 @@ pub mod document_tests {
                 }),
                 url: mock_issuer.clone(),
                 dids: vec![TEST_DID.parse().unwrap()],
-                domain_linkage_valid: false,
+                validations: vec![Validation::DomainLinkage(DomainLinkageValidation {
+                    domain: mock_issuer.clone(),
+                    result: ValidationResult {
+                        valid: false,
+                        error: None,
+                        last_validated: mock_time,
+                    },
+                })],
                 first_interacted: Some(mock_time),
                 last_interacted: Some(mock_time),
             }])
@@ -355,9 +408,16 @@ pub mod document_tests {
             })
             .then_expect_events(vec![ConnectionEvent::ConnectionSynced {
                 connection_id: "abcd-123".to_string(),
+                validations: vec![Validation::DomainLinkage(DomainLinkageValidation {
+                    domain: mock_issuer,
+                    result: ValidationResult {
+                        valid: false,
+                        error: None,
+                        last_validated: mock_time,
+                    },
+                })],
                 pending_changes: Some(PendingChanges {
                     dids: Some(vec![TEST_DID.parse().unwrap()]),
-                    domain_linkage_valid: false,
                     display: Some(ConnectionDisplayProperties {
                         name: Some("Timeless Institute".to_string()),
                         locale: Some("en".to_string()),
@@ -375,13 +435,21 @@ pub mod document_tests {
     fn accept_connection_changes() {
         let services = IdentityServices::default();
         let mock_time = "2026-03-04T12:00:00Z".parse::<DateTime<Utc>>().unwrap();
+        let mock_issuer: Url = "https://example.com".parse().unwrap();
 
         ConnectionTestFramework::with(services)
             .given(vec![ConnectionEvent::ConnectionSynced {
                 connection_id: "abcd1234".to_string(),
+                validations: vec![Validation::DomainLinkage(DomainLinkageValidation {
+                    domain: mock_issuer,
+                    result: ValidationResult {
+                        valid: false,
+                        error: None,
+                        last_validated: mock_time,
+                    },
+                })],
                 pending_changes: Some(PendingChanges {
                     dids: Some(vec![TEST_DID.parse().unwrap()]),
-                    domain_linkage_valid: false,
                     display: Some(ConnectionDisplayProperties {
                         name: Some("Timeless Institute".to_string()),
                         locale: Some("en".to_string()),
@@ -407,7 +475,6 @@ pub mod document_tests {
                     }),
                 }),
                 dids: vec![TEST_DID.parse().unwrap()],
-                domain_linkage_valid: false,
                 last_interacted: Some(mock_time),
                 pending_changes: None,
             }]);
