# agent_identity/src/connection/event.rs
@@ -1,4 +1,4 @@
-use crate::connection::aggregate::{ConnectionDisplayProperties, PendingChanges};
+use crate::connection::aggregate::{ConnectionDisplayProperties, PendingChanges, Validation};
 use chrono::{DateTime, Utc};
 use cqrs_es::DomainEvent;
 use identity_core::common::Url;
@@ -13,15 +13,16 @@ pub enum ConnectionEvent {
         display: Option<ConnectionDisplayProperties>,
         url: Url,
         dids: Vec<DIDUrl>,
-        domain_linkage_valid: bool,
         first_interacted: Option<DateTime<Utc>>,
         last_interacted: Option<DateTime<Utc>>,
+        validations: Vec<Validation>,
     },
     ConnectionRemoved {
         connection_id: String,
     },
     ConnectionSynced {
         connection_id: String,
+        validations: Vec<Validation>,
         pending_changes: Option<PendingChanges>,
         last_interacted: Option<DateTime<Utc>>,
     },
@@ -29,7 +30,6 @@ pub enum ConnectionEvent {
         connection_id: String,
         display: Option<ConnectionDisplayProperties>,
         dids: Vec<DIDUrl>,
-        domain_linkage_valid: bool,
         last_interacted: Option<DateTime<Utc>>,
         pending_changes: Option<PendingChanges>,
     },
